--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,13 +4,7 @@
   "icons": [
     {
       "src": "public/pink-transparent-robot.png",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "public/pink-transparent-robot.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "type": "image/png"
     }
   ],
   "start_url": ".",
