--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,33 @@
-version: "2"
-services:
-  app:
-    build: .
-    ports:
-      - 58000:3000
+version: "3"
 
-  postgres:
+services:
+  ui:
+    image: ep/frontend
+    build:
+      context: .
+      dockerfile: ./services/frontend/Dockerfile
+    ports:
+      - '58000:3000'
+
+  api:
+    image: ep/backend
+    build:
+      context: .
+      dockerfile: ./services/backend/Dockerfile
+    ports:
+      - '59000:8080'
+    depends_on:
+      - database
+  database:
     image: postgres:10.5
     environment:
-      - POSTGRES_USER=luvjain
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_HOSTNAME=localhost
-      - POSTGRES_PORT=8000
-      - POSTGRES_DB=event_planning
+      - POSTGRES_USER
+      - POSTGRES_PASSWORD
+      - POSTGRES_HOSTNAME
+      - POSTGRES_PORT
+      - POSTGRES_DB
     ports:
-      - '8000:8000'
+      - '5432:5432'
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
  #    - ./sql/create_tables.sql:/docker-entrypoint-initdb.d/create_tables.sql
