--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     build:
       context: .
       dockerfile: ./services/ui/Dockerfile
+    volumes:
+      - .:/workspace
     ports:
       - '58000:3000'
 
@@ -16,6 +18,8 @@ services:
     build:
       context: .
       dockerfile: ./services/api/Dockerfile
+    volumes:
+      - .:/workspace
     ports:
       - '59000:8080'
     depends_on:
@@ -33,5 +37,4 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
-      - ./server/go_events.sql:/docker-entrypoint-event_planning.d/server/go_events.sql
+      - ./server/init.sql:/docker-entrypoint-initdb.d/init.sql
