--- a/services/ui/Dockerfile
+++ b/services/ui/Dockerfile
@@ -1,15 +1,15 @@
 # syntax=docker/dockerfile:1
-
 FROM node:12-slim
 
 WORKDIR /workspace
 
-COPY package*.json .
+RUN npm install -g nodemon
 
+COPY package*.json .
 RUN npm install
 
 COPY . .
 
 EXPOSE 3000
 
-CMD [ "npm", "start" ]
+CMD [ "nodemon", "start" ]
