add comments and add new env vars to env example file

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
+# development
 POSTGRES_USER=username
 POSTGRES_PASSWORD=password
 POSTGRES_HOSTNAME=hostname
 POSTGRES_PORT=5432
 POSTGRES_DB=db_name
+
+# production
+AWS_ACCESS_KEY=#######
+AWS_SECRET_KEY=#######
